dev/ingress/fake17-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake17-ingress
  namespace: fake17-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake17.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake17-service
                port:
                  number: 20017
